v0.1.6:
	2020-12-15 -- Closes #25, pythonshell() Windows issue; e576f7e
v0.1.7:
	2020-12-23 -- 797ce42 Make error() work when pythonshell() == 'shell'
	2020-12-23 -- 84daa48 Chunking bugfixes
v0.1.8:
	2020-12-23 -- 1cfbfc3 Add P1D chunk tests
	2020-12-23 -- f41599c Add P1Y chunk tests
	2020-12-23 -- ff8e1ab Refactor hapi.py; clean up util.py
v0.1.9b0:
	2020-12-24 -- Remove hapiplot. Addresses #31.
	2020-12-28 -- 1c1d32f Fix time name conflict.
v0.1.9b1:
	2020-01-19 -- 53669fc Add missing hapitime.py file
	2020-01-19 -- Deleted v0.1.8 pip package b/c affected by above
	2020-01-20 -- 9f8b82f Use atol instead of rtol in readcompare.py
	2020-01-20 -- d3625e3 Fix for wrong error message (#24)
v0.1.9b2:
	2021-05-25 -- 23b659c Simplify dtype/length code
v0.1.9b3:
	2021-05-25 -- 8161460 Refactor Makefile
v0.1.9b4:
	2021-05-26 -- 2cabeb4 README.rst -> README.md
	2021-05-26 -- b825a54 Fix README file extension
v0.2.0:
	2021-06-16 -- 1e891a9 Tox and Travis update
v0.2.1:
	2021-06-16 -- Fix for long_description_content_type
v0.2.2:
	2021-06-16 -- Move import of joblib.
	2022-01-17 -- Full Unicode support and additional tests.
v0.2.3:
	2022-03-01 -- bf0cc88 Add allow_missing_Z in hapitime2datetime.
v0.2.4:
	2022-03-07 -- 88b0eb2 try/except on file read
	2022-03-29 -- 0042abb Fix for method=''. Closes #47.
v0.2.5:
	2022-06-30 -- 10df388 Update docstring for hapi()
	2022-07-12 -- 460c30b Final Unicode/Windows fixes
v0.2.6b:
	2022-08-08 -- 508fb20-3f1168c Add datetime2hapitime
	2022-08-08 -- 8bfef2f Allow start and stop to be None; https://github.com/hapi-server/client-python/issues/10
	2022-09-21 -- bc70f3c CSV read failure; https://github.com/hapi-server/client-python/issues/62
	2022-09-22 -- 373fdca Catch other CSV read failures
v0.2.6b1:
	2023-02-04 -- 2ef7cff Unicode fix; Log string fix
	2024-05-11 -- fba4ad3 Testing Updates
v0.2.6:
	2023-05-24 -- Use token for PyPi in Makefile
v0.2.7b1:
	2025-03-01 -- https://github.com/hapi-server/client-python/issues/76