@@ -106,3 +106,4 @@ v0.2.6:
 	2023-05-24 -- Use token for PyPi in Makefile
 v0.2.7b1:
 	2025-03-01 -- https://github.com/hapi-server/client-python/issues/76
+	2025-03-01 -- https://github.com/hapi-server/client-python/issues/78
